--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "@radix-ui/react-progress": "^1.1.7",
     "@tabler/icons-react": "^3.34.1",
     "canvas": "^3.2.0",
